--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
-        "laravel/socialite": "^2.0"
+        "laravel/socialite": "^2.0",
+        "components/font-awesome": "^4.7"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
